--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -36,9 +36,9 @@ spring:
             indent-output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:postgresql://localhost:5432/foot
-        username: foot
-        password:
+        url: jdbc:postgresql://localhost:5432/ma_base
+        username: jgt
+        password: Brasserie76e
         hikari:
             auto-commit: false
     jpa:
